objects/Booking__c.object
<CustomObject>
    <fields>
        <fullName>Advance_Amount__c</fullName>
        <label>Advance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_From_Date__c</fullName>
        <label>Booking From Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_To_Date__c</fullName>
        <label>Booking To Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Car__c</fullName>
        <label>Car</label>
        <referenceTo>Car__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Driver__c</fullName>
        <label>Driver</label>
        <referenceTo>Driver__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Drop_Point__c</fullName>
        <label>Drop Point</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fare__c</fullName>
        <formula>( Booking_From_Date__c - Booking_To_Date__c )* Car__r.Charges_Per_Day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fare</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id_Proof__c</fullName>
        <label>Id Proof</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pick_up_Point__c</fullName>
        <label>Pick up Point</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Booking</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Bookings Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>